--- a/Main/SEToolbox/SEToolbox/App.xaml
+++ b/Main/SEToolbox/SEToolbox/App.xaml
@@ -26,6 +26,21 @@
             </DockPanel>
         </DataTemplate>
 
+        <Style x:Key="DockPanelSeparator" TargetType="{x:Type Separator}">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Separator}">
+                        <Grid Margin="3" Width="2">
+                            <Rectangle Fill="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" Width="1" HorizontalAlignment="Right"/>
+                            <Rectangle Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Width="1" HorizontalAlignment="Left"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
 
         <ObjectDataProvider x:Key="ClassTypeEnum" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
             <ObjectDataProvider.MethodParameters>
@@ -38,5 +53,6 @@
                 <x:Type TypeName="interop:ImportArmorType" />
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
+        
     </Application.Resources>
 </Application>
